crates/plotnik-tests/tests/02-parser/recovery_incomplete/mixed_valid_invalid_captures.txt
Q = (a) @ok @ @name
------------------ DIAGNOSTICS -------------------
error: expected a capture name after `@`
 --> query.ptk:1:13
  |
1 | Q = (a) @ok @ @name
  |             ^
  |
help: captures attach to the pattern before them: `(node) @name`
